--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -1,21 +1,239 @@
-@import "_base";
+@import "base";
 
 /* @media (min-width: 992) and (max-width: 1199px) { ... } */
 
 body {
-    font-size: 13px;
+    font-size: 14px;
 }
 
-@media (min-width: 992) and (max-width: 1199px) {
+@media (min-width: 992px) and (max-width: 1199px) {
 
     // Navbar
     .navbar {
         .navbar-brand {
-            padding-left: 0;
+            padding-left: 5rem;
         }
-        ul {
-            padding-right: 0;
+        .navbar-nav {
+            padding-right: 5rem;
+        }
+        .navbar-nav li a {
+            padding-top: 2rem;
         }
     }
+    //  Jumbotron wrapper
+    .jumbotron {
+        .wrapper {
+            h1 {
+            font-size: 4em;
+            }
+            p {
+                font-size: 1em;
+            }
+            a {
+                margin-top: 7rem;
+            }
+        }
+    }
+    // Section team
+    .ourTeam {
+        .ourTeam__box {
+            padding: 2rem;
+        }
+        .fab {
+            padding-top: 7px;
+            margin-right: 0.1rem;
+        }
+    }
+    // Footer
+    footer {
+        .footer__social i {
+            width: 30px;
+            height: 30px;
+            font-size: 1em;
+            padding-top: 7px;
+            margin-right: 0.1rem;
+        }
+    }
+
+}
+
+
+/* @media (min-width: 768px) and (max-width: 991px) {...} */
+
+@media (min-width: 768px) and (max-width: 991px) {
+
+    body {
+        font-size: 12px;
+    }
+
+     // Navbar
+     .navbar {
+        .navbar-brand {
+            padding-left: 1rem;
+            img {
+                width: 15rem;
+            }
+        }
+        .navbar-nav {
+            padding-right: 0;
+        }
+        .navbar-nav li a {
+            padding-top: 1.5rem;
+        }
+    }
+    //  Jumbotron wrapper
+    .jumbotron {
+        .wrapper {
+            h1 {
+            font-size: 3.7em;
+            }
+            p {
+                font-size: 1.2em;
+                padding: 0 10rem;
+            }
+            a {
+                margin-top: 7rem;
+                padding: 1rem 5rem;
+            }
+        }
+    }
+    // Section team
+    .ourTeam {
+        .ourTeam__box {
+            padding: 2rem;
+        }
+        .fab {
+            margin-right: 0.1rem;
+            padding-top: 8px;
+        }
+    }
+    //Section references
+    .clients {
+        .carousel-caption {
+            q {
+                font-size: 1.2em;
+            }
+        }
+    }
+    // Section download
+    .download {
+        margin-top: 0;
+        h2 {
+            font-size: 1.8em;
+        }
+        a {
+            padding: 1rem 7rem;
+        }
+    }
+    // Footer
+    footer {
+        margin-top: 1rem;
+        .footer__social i {
+            width: 30px;
+            height: 30px;
+            font-size: 1em;
+            padding-top: 7px;
+            margin-right: 0.1rem;
+        }
+    }
+}
+
+/* @media (max-width: 767px) { ... } */
+
+@media (max-width: 767px) {
+
+    body {
+        font-size: 14px;
+    }
+    // Navbar
+    .navbar {
+        .navbar-header {
+            margin: 0;
+        }
+        .navbar-brand {
+            padding-left: 0;
+            img {
+                width: 15rem;
+            }
+        }
+        .navbar-nav li a {
+            padding-top: 1.5rem;
+        }
+        .navbar-collapse {
+            text-align: center;
+            background-color: $color-blue;
+        }
+        .navbar-nav {
+            padding: 0;
+            margin: 0;
+            li a {
+
+                &:hover {
+                    background-color: $media-social-color;
+                    transform: scale(1);
+                }
+            }
+        }
+    }
+    //  Jumbotron wrapper
+    .jumbotron {
+        .wrapper {
+            h1 {
+            font-size: 2.8em;
+            padding: 0 3rem;
+            }
+            p {
+                font-size: 1em;
+                margin-top: 2rem;
+                padding: 0 5rem;
+            }
+            a {
+                margin-top: 7rem;
+                padding: 0.7rem 2rem;
+            }
+        }
+    }
+    // Section actions
+    .actions > div {
+        margin-bottom: 2rem;
+        margin-top: 4rem;
+    }
+    h4 {
+        font-size: 2em;
+    }
+    p {
+        font-size: 1.3em;
+    }
+    // Section team
+    .ourTeam {
+        h2 {
+            font-size: 2em;
+        }
+        h3 {
+            font-size: 1.2em;
+        }
+    }
+    //Section references
+    .clients {
+        padding: 5rem 0 0 0;
+        .carousel-indicators {
+            margin-bottom: 0;
+        }
+        .carousel img {
+            width: 100%;
+        }
+        .carousel-caption {
+            position: static;
+
+            q {
+                font-size: 1.2em;
+            }
+            p {
+                font-size: 1em;
+            }
+        }
+
+    }
+
 
 }
