--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -48,7 +48,7 @@ header::after {
 .navbar {
   top: 1rem;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   right: 0;
 }
 
@@ -73,13 +73,34 @@ header::after {
   font-size: 0.9em;
   color: rgba(255, 255, 255, 0.75);
   letter-spacing: 0.1em;
+  transition: 0.5s;
 }
 
 .navbar .navbar-nav li a:hover {
   opacity: 1;
-  background-color: #66697e;
+  background-color: transparent;
   transform: scale(1.2);
   font-weight: 600;
+}
+
+.navbar .navbar-nav li a:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #7580a1;
+  transition: transform 0.5s;
+  transform-origin: right;
+  transform: scaleY(0);
+  z-index: -1;
+}
+
+.navbar .navbar-nav li a:hover:before {
+  transition: transform 0.5s;
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 .navbar .navbar-toggle {
@@ -612,7 +633,6 @@ body {
     margin: 0;
   }
   .navbar .navbar-nav li a:hover {
-    background-color: #7580a1;
     transform: scale(1);
   }
   .jumbotron .wrapper h1 {
