--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -46,10 +46,11 @@ header::after {
 }
 
 .navbar {
-  top: 1rem;
+  top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   right: 0;
+  background-color: #263663;
 }
 
 .navbar .bottom-line {
@@ -58,6 +59,7 @@ header::after {
 }
 
 .navbar .navbar-brand {
+  margin-top: 1rem;
   padding-left: 10rem;
 }
 
@@ -66,6 +68,7 @@ header::after {
 }
 
 .navbar .navbar-nav li a {
+  margin-top: 1rem;
   padding-top: 15px;
   padding-bottom: 15px;
   text-transform: uppercase;
@@ -74,13 +77,17 @@ header::after {
   color: rgba(255, 255, 255, 0.75);
   letter-spacing: 0.1em;
   transition: 0.5s;
+  opacity: 0.8;
 }
 
 .navbar .navbar-nav li a:hover {
   opacity: 1;
   background-color: transparent;
-  transform: scale(1.2);
   font-weight: 600;
+}
+
+.navbar .navbar-nav li a:focus {
+  background-color: #263663;
 }
 
 .navbar .navbar-nav li a:before {
@@ -454,10 +461,16 @@ footer #slideUp {
   position: fixed;
   bottom: 27rem;
   right: -23rem;
+  opacity: 0.4;
+}
+
+footer #slideUp:hover {
+  opacity: 1;
 }
 
 footer #slideUp .fas {
   color: rgba(245, 6, 6, 0.8);
+  font-size: 3em;
 }
 
 footer .row {
@@ -619,6 +632,15 @@ body {
   footer {
     margin-top: 1rem;
   }
+  footer #slideUp {
+    width: 4rem;
+    height: 4rem;
+    padding-top: 0.5rem;
+    bottom: 28rem;
+  }
+  footer #slideUp .fas {
+    font-size: 2em;
+  }
   footer .footer__social i {
     width: 30px;
     height: 30px;
@@ -652,6 +674,9 @@ body {
   }
   .navbar .navbar-nav li a:hover {
     transform: scale(1);
+  }
+  .navbar .navbar-toggle {
+    margin-top: 1.8rem;
   }
   .jumbotron .wrapper h1 {
     font-size: 2.8em;
@@ -716,6 +741,15 @@ body {
   }
   footer {
     margin-top: 0;
+  }
+  footer #slideUp {
+    width: 4rem;
+    height: 4rem;
+    padding-top: 0.4rem;
+    bottom: 28.2rem;
+  }
+  footer #slideUp .fas {
+    font-size: 2em;
   }
   footer .row {
     padding-top: 0;
